# roboespas

./: .gitignore  README.md  save_trajs.m
Common/: IiwaCommandFRI.m  IiwaCommandStack.m  IiwaMsgTransformer.m  IiwaPlotter.m  IiwaRoboespas.m  IiwaRobot.m  IiwaScrewTheory.m  IiwaTrajectory.m  IiwaTrajectoryGeneration.m  init_ros.m
Common/TestFRI/: movej.m  movetraj.m
IDSimulation/: IiwaPlotter.m  IiwaScrewTheory.m  TorqueControlExample.m  TrajectoryTorqueControlExample.m  test.m
IiwaCommand/: IiwaCommand.m  IiwaPlotter.m  IiwaRobot.m  IiwaTrajectory.m  IiwaTrajectoryGeneration.m  init_ros.m
IiwaCommand/Tests/: FindMaximumAcceleration.m  SplineTrajectory.m  TestJointTorqueTrajectory.m  TestMoveJ.m  TestMoveJSmallDisplacement.m  TestMoveJTrajectory.m  TestMoveL.m  TestMoveLSmallDisplacement.m  TestMoveLTrajectory.m  TestMoveLTrajectory2.m
IiwaCommand/catkin_ws/src/iiwa_fri/FRI-Client-SDK_Cpp/example/LBRWrenchSineOverlay/: CMakeLists.txt  LBRWrenchSineOverlayClient.h
IiwaCommand/catkin_ws/src/iiwa_fri/FRI-Client-SDK_Cpp/example/SimulatedTransformationProvider/: CMakeLists.txt
IiwaCommand/catkin_ws/src/iiwa_fri/FRI-Client-SDK_Cpp/src/base/: CMakeLists.txt  friClientApplication.cpp
IiwaCommand/catkin_ws/src/iiwa_fri/FRI-Client-SDK_Cpp/src/client_lbr/: CMakeLists.txt  friLBRClient.cpp  friLBRState.cpp
IiwaCommand/catkin_ws/src/iiwa_fri/FRI-Client-SDK_Cpp/src/client_trafo/: CMakeLists.txt  friTransformationClient.cpp
IiwaCommand/catkin_ws/src/iiwa_fri/FRI-Client-SDK_Cpp/src/nanopb-0.2.8/: CMakeLists.txt  pb_syshdr_win.h
IiwaCommand/catkin_ws/src/iiwa_fri/FRI-Client-SDK_Cpp/src/protobuf/: CMakeLists.txt  friMonitoringMessageDecoder.cpp
IiwaCommand/catkin_ws/src/iiwa_fri/FRI-Client-SDK_Cpp/src/protobuf_gen/: CMakeLists.txt  FRIMessages.pb.c
IiwaCommand/catkin_ws/src/iiwa_gazebo/: package.xml
IiwaCommand/catkin_ws/src/iiwa_gazebo/worlds/: iiwa.world
IiwaCommand/functions_transformed_to_ros/: MoveJ.m  MoveL.m  MoveLGivenTrajTheory.m
IiwaCommand/iiwa_command/: package.xml
ModelCalibration/: IiwaPlotter.m  TrajectoryTorqueControlExample.m  init_ros.m
OpenSimControl/: .gitignore
Results/CartVelControlComparisons/: WithCartVelControl_k0.fig  WithMoveJControl.fig  WithMoveJControl_jacobianupdatedwiththq.fig  k0.fig  k0_001.fig  k0_005.fig  k0_01.fig
Results/Figures/: SameNode150_1.fig  SameNode150_2.fig  SameNode150_3.fig  SameNode200.fig  WithDifferentNode.fig
Results/MaxAccFRI/: ReadPositionWithOutliers.fig  SameNode150_4after200.fig  WithSameNode.fig
Results/MoveJErrors/: feedbackVSnofeedback_01vel_05k.fig  feedbackVSnofeedback_07vel_05k.fig
RoboespasApp/: Copy_of_IIWAControl.m  DelsysCommunication.m  DelsysSensors.m  DelsysSensors_Calibration.m  FTSensor.m  IIWAControl.m  ROBOESPAS.mlapp  ROBOESPAS_Little.mlapp  ReadGagesLong.slx
RoboespasApp/Doc/: ManualRoboespasApp.pptx  Roboespas_papeles.pptx
RoboespasApp/IIWA/: Capture.m  IIWAControl.m  IIWAControl_iiwa_stack.m
RoboespasApp/IiwaCommand/: IiwaCommand.m  IiwaTrajectoryGeneration.m
RoboespasApp/New/: find_ip.m
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/: .gitattributes  .gitignore  CMakeLists.txt
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/example/: CMakeLists.txt
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/example/IOAccess/: CMakeLists.txt  IOAccessApp.cpp  IOAccessClient.cpp
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/example/LBRClientTemplate/: CMakeLists.txt  MyLBRApp.cpp  MyLBRClient.h
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/example/LBRJointSineOverlay/: CMakeLists.txt  LBRJointSineOverlayApp.cpp  LBRJointSineOverlayClient.h
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/example/LBRTorqueSineOverlay/: CMakeLists.txt  LBRTorqueSineOverlayClient.cpp
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/example/LBRWrenchSineOverlay/: LBRWrenchSineOverlayApp.cpp  LBRWrenchSineOverlayClient.cpp
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/example/Monitor/: CMakeLists.txt  MonitorClient.h
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/example/SimulatedTransformationProvider/: SimulatedTransformationProviderApp.cpp  SimulatedTransformationProviderClient.cpp  SimulatedTransformationProviderClient.h
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/example/TransformationProvider/: CMakeLists.txt  TransformationProviderApp.cpp  TransformationProviderClient.cpp  TransformationProviderClient.h
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/include/: friClientApplication.h  friLBRClient.h  friTransformationClient.h
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/src/: CMakeLists.txt
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/src/base/: friClientData.h
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/src/client_lbr/: friLBRCommand.cpp
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/src/connection/: CMakeLists.txt  friUdpConnection.cpp
RoboespasApp/ROS/catkin_ws/src/FRI-Client-SDK_Cpp/src/protobuf/: friCommandMessageEncoder.cpp  friCommandMessageEncoder.h  friMonitoringMessageDecoder.h  pb_frimessages_callbacks.c  pb_frimessages_callbacks.h
RoboespasApp/ROS/catkin_ws/src/iiwa_gazebo/: CMakeLists.txt  package.xml
RoboespasApp/Results/: save_results.m
RoboespasApp/catkin_ws/src/roboespas_iiwacontrol/: CMakeLists.txt
RoboespasApp/catkin_ws/src/roboespas_iiwacontrol/config/: params.yaml
RoboespasApp/catkin_ws/src/roboespas_iiwacontrol/launch/: roboespas.launch  roboespas_gazebo.launch
RoboespasApp/catkin_ws/src/roboespas_iiwacontrol/src/: IiwaTrajectory.cpp  capture.cpp  capture_lib.cpp  configuration.cpp  conversions_lib.cpp  filter_lib.cpp  iiwa_command_node.cpp  movement.cpp  screw_theory_lib.cpp
RoboespasApp/catkin_ws/src/roboespas_iiwacontrol/srv/: bak.tar
cpp/SpasticMuscleModels/SpasticMillardMuscleModel/: CMakeLists.txt  SpasticMillardMuscleModel.cpp  SpasticMillardMuscleModel.h
iiwa_command/: CMakeLists.txt  package.xml
iiwa_fri/: CMakeLists.txt  README.md  package.xml
iiwa_gazebo_plugin/: CMakeLists.txt  package.xml
iiwa_msgs/: CMakeLists.txt  package.xml
src/: README.md
(+1585 files in other folders)
