<?xml version="1.0"?>
<package>
  <name>iiwa_gazebo</name>
  <version>1.5.0</version> <!-- Based on Salvo Virga iiwa_gazebo 1.5.0 -->
  <description>This package allows to load a KUKA LBR IIWA robot onto Gazebo and implements a plugin to allow torque-control</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <author email="acasanov@pa.uc3m.es">Leytha</author>
  <maintainer email="acasanov@pa.uc3m.es">Leytha</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend> 
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
